Added authorisation check to resources

--- a/OcelotAPI/appsettings.json
+++ b/OcelotAPI/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Audience": {
+    "Secret": "Y2F0Y2hlciUyMHdvbmclMjBsb3ZlJTIwLm5ldA==",
+    "Iss": "https://localhost:5051",
+    "Aud": "https://localhost:5021"
+  },
   "AllowedHosts": "*"
 }
