--- a/OcelotAPI/OcelotAPI.csproj
+++ b/OcelotAPI/OcelotAPI.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.11.1" />
     <PackageReference Include="Ocelot" Version="17.0.0" />
+    <PackageReference Include="Ocelot.Provider.Eureka" Version="17.0.0" />
   </ItemGroup>
 
 </Project>
