--- a/OcelotAPI/Properties/launchSettings.json
+++ b/OcelotAPI/Properties/launchSettings.json
@@ -23,6 +23,16 @@
       },
       "dotnetRunMessages": "true",
       "applicationUrl": "https://localhost:5021;http://localhost:5020"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "dev"
+      },
+      "publishAllPorts": true,
+      "useSSL": true
     }
   }
 }
