--- a/OcelotAPI/OcelotAPI.csproj
+++ b/OcelotAPI/OcelotAPI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
     <PackageReference Include="Ocelot" Version="17.0.0" />
     <PackageReference Include="Ocelot.Provider.Eureka" Version="17.0.0" />
+    <PackageReference Include="Ocelot.Provider.Kubernetes" Version="17.0.0" />
   </ItemGroup>
 
 </Project>
